--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@vue/tsconfig": "^0.7.0",
     "autoprefixer": "^10.4.21",
     "postcss": "^8.5.3",
+    "prettier": "3.5.3",
     "tailwindcss": "^4.1.5",
     "typescript": "~5.8.3",
     "vite": "^6.3.5",
