--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -26,7 +26,7 @@ jobs:
         with:
           node-version: ${{ matrix.node-version }}
           cache: 'npm'
-      - run: npm ci
+      - run: npm i
+      - run: npx prettier --check .
       - run: npm run build --if-present
-      - run: prettier --check .
       - run: npm test
